updated database , ready for CRUD

--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,12 @@
 {
   "development": {
-    "username": "postgres",
+     "username": "postgres",
     "password": null,
-    "database": "candy-crush",
+     "database": "candy-crush",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+     "dialect": "postgres"
+  },
+  "production": {
+    "use_env_variable": "DATABASE_URL"
   }
 }
