--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,5 +20,14 @@
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MacSupportPlus/candy-bash.git"
+  },
+  "bugs": {
+    "url": "https://github.com/MacSupportPlus/candy-bash/issues"
+  },
+  "homepage": "https://github.com/MacSupportPlus/candy-bash#readme"
 }
